Update all project files with recent changes

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -101,7 +101,7 @@ table{font-family: arial, sans-serif;
 #titextra{
   margin-bottom: -9px;
 }
- form{
+#dayInput{
    margin-top:1%;
    margin-bottom:1%;
    text-align: center;
