--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,141 +1,144 @@
-body{
+body {
   text-align: center;
 }
-#newteam{
+
+#newteam {
   text-align: center;
 }
-#menu,#user_team{
+
+#menu, #user_team {
   display: none;
 }
+
 #team_name {
   color: black;
-  font-size:40px;
-  text-align: center;
-}
-#date{
-  color: black;
-  font-size:40px;
+  font-size: 40px;
   text-align: center;
 }
 
-#menu , .log{
-  width:70%;
+#date {
+  color: black;
+  font-size: 40px;
+  text-align: center;
+}
+
+#menu, .log {
+  width: 70%;
   margin-left: auto;
   margin-right: auto;
-  text-align:center;
-
+  text-align: center;
 }
-
-
-
 
 a {
   text-decoration: none;
-  color: inherit;
+  color: black;
 }
 
-#menu-logedin{
-  width:70%;
+#menu-logedin {
+  width: 70%;
   margin-left: auto;
   margin-right: auto;
-  text-align:center;
+  text-align: center;
   display: none;
-
 }
-.r,.w,.o{
+
+.r, .w, .o {
   padding-left: 1%;
   padding-right: 1%;
 }
-.r,.w{
-  border-left:solid;
+
+.r, .w {
+  border-left: solid;
 }
+
 .w:first-child {
-  border-left: none; 
+  border-left: none;
 }
 
-
-
-.b:hover,.n:hover,.a:hover{
+.b:hover, .n:hover, .a:hover {
   padding-left: 1.5%;
   padding-right: 1.5%;
   cursor: pointer;
   font-weight: bold;
 }
-.b,.n,.a{
+
+.b, .n, .a {
   padding-left: 1%;
   padding-right: 1%;
 }
-.b,.n{
-  border-left:solid;
+
+.b, .n {
+  border-left: solid;
 }
 
-table{font-family: arial, sans-serif;
- border-collapse: collapse;
- width: 50%;
- margin-left: auto;
- margin-right: auto;
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
- td, th {
-   border-left: 1px solid black;
-   text-align: left;
-   padding: 8px;
- }
 
- #maintable tr:nth-child(odd)  {
-   background-color: #dddddd;
- }
+td, th {
+  border-left: 1px solid black;
+  text-align: left;
+  padding: 4px;
+}
 
- #maintable tr td:first-child { 
-  width : 10%; 
-} 
+#maintable tr:nth-child(odd) {
+  background-color: #dddddd;
+}
 
+#maintable tr td:first-child {
+  width: 10%;
+}
 
-
-#divextra{
+#divextra {
   width: 50%;
   margin-left: auto;
   margin-right: auto;
-  display: none;
   text-align: left;
+  display: none;
 }
-#titextra{
+
+#titextra {
   margin-bottom: -9px;
 }
-#dayInput{
-   margin-top:1%;
-   margin-bottom:1%;
-   text-align: center;
- }
 
-.print{
+#dayInput {
+  margin-top: 1%;
+  margin-bottom: 1%;
+  text-align: center;
+}
+
+.print {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
   width: 70%;
 }
 
-#login{
-  margin-top:2%;
+#login {
+  margin-top: 2%;
 }
-/*start login div*/
 
-.backgroundlogin{
+.backgroundlogin {
   display: none;
   position: absolute;
   top: 0;
-  left : 0;
-  background-color: grey;
+  left: 0;
   background: rgb(0 0 0 / 40%);
   z-index: 2;
   width: 100%;
   height: 100%;
 }
-.logindiv{
+
+.logindiv {
   display: none;
-  position:absolute;
+  position: absolute;
   z-index: 3;
   top: calc(50% - 250px);
-  left : calc(50% - 150px);
+  left: calc(50% - 150px);
   width: 300px;
   height: 300px;
   border: 1px solid black;
@@ -145,46 +148,234 @@ table{font-family: arial, sans-serif;
   box-shadow: 10px 15px 15px black;
 }
 
-#msg-login{
-  margin-top:2%;
+#msg-login {
+  margin-top: 2%;
 }
 
-/*end login div*/
-
-
 @media print {
-  .team_naam ,.date{
+  .team_naam, .date {
     font-size: 30px;
   }
   
-  .menu ,.print,.log{
-  display: none;
+  .menu, .print, .log {
+    display: none;
   }
   
-  #andere_dag_bekijken,#lh{
-      display: none;
+  #andere_dag_bekijken, #lh {
+    display: none;
   }
-  #divextra{
+  
+  #divextra {
     width: 100%;
+    display: none;
   }
   
   #maintable {
-      width: 100%;
-      border: 1px solid #ddd;
-    }
-    
+    width: 100%;
+    border: 1px solid #ddd;
+  }
+  
+  #maintable td, th {
+    border: 1px solid black;
+    text-align: left;
+    font-size: 25px;
+    padding: 8px;
+  }
+  
+  #maintable tr:nth-child(even) {
+    text-align: right;
+    background-color: green;
+  }
+}
 
-    #maintable td, th {
-      border: 1px solid black;
-      text-align: left;
-      font-size: 25px;
-      padding: 8px;
-      background-color:red;
-    }
-   
-    #maintable tr:nth-child(even) {
-      text-align: right;
-      background-color:green;
-    }
+/* Remove underline from all links */
+.menu, .log {
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
 
+/* Hover effect for menu items */
+.r:hover, .w:hover, .o:hover {
+  padding-left: 2%;
+  padding-right: 2%;
+  cursor: pointer;
+  background-color: lightgrey;
+  font-weight: bold;
+}
+
+/* Form styling */
+#form {
+  text-align: center;
+}
+
+/* Main grid for teamleden, reserves, and jobstudenten */
+#maindiv {
+  display: inline-grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  background-color: lightgray;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Styling for teamleden, reserves, and jobstudenten */
+#teammembers_div, #reserves_div, #jobstunds_div {
+  display: block;
+  border-left: 1px solid black;
+  text-align: left;
+  padding-left: 10px;
+  padding-bottom: 10px;
+}
+
+/* Horizontal rule styling */
+hr {
+  width: 70%;
+}
+
+#divextra hr {
+  width: 100%;
+}
+
+/* Title div styling */
+#aantitle_div {
+  text-align: center;
+}
+
+/* Background div styling */
+#bg {
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Team name and date styling */
+.team_naam {
+  color: black;
+  font-size: 40px;
+  text-align: center;
+}
+
+.date {
+  color: black;
+  font-size: 40px;
+  text-align: center;
+}
+
+/* Styling for the operators list in cell3 */
+#maintable ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+#maintable ul li {
+  margin: 0;
+  padding: 0;
+  line-height: 1.2;
+}
+
+#maintable ul li span {
+  cursor: pointer;
+  color: black;
+}
+
+#maintable ul li span:hover {
+  color: #333;
+}
+
+.d_en_v {
+  vertical-align: top;
+}
+
+.d_en_v:hover {
+  cursor: pointer;
+}
+
+/* Buttons styling */
+.buttons {
+  text-align: center;
+}
+
+/* Dropdown styling */
+.bg_dropdown {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#tit-list-anwz {
+  padding-top: 15px;
+}
+
+.dropdown-div {
+  position: relative;
+  background-color: rgb(224, 228, 170);
+  max-width: 15%;
+  border-radius: 10px;
+  box-shadow: 10px 10px #413d3d;
+  text-align: center;
+  top: 20%;
+  left: 60%;
+}
+
+#niemand {
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  border-bottom: 1px solid;
+  background-color: rgb(65, 58, 87);
+  color: white;
+  padding: 10px;
+}
+
+#niemand:hover {
+  cursor: pointer;
+}
+
+#aanwezigen-dd {
+  padding-bottom: 20px;
+}
+
+.li-elemt {
+  text-align: left;
+  border-bottom: 2px solid rgb(65, 58, 87);
+  width: 80%;
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+
+.li-elemt:hover, #liextra {
+  cursor: pointer;
+}
+
+/* Proposal div visibility */
+#aan_div {
+  display: block;
+}
+
+#proposal-div {
+  display: none;
+}
+
+.w {
+  padding-left: 5px;
+  padding-right: 5px;
+  border-left: solid 1px;
+}
+
+.w:hover {
+  background-color: lightgray;
+  padding-left: 1.5%;
+  padding-right: 1.5%;
+  font-weight: bold;
+}
+
+#user_team {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
