--- a/public/css/login.css
+++ b/public/css/login.css
@@ -3,7 +3,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  background: rgb(0 0 0 / 40%); 
+  background: #f4f4f9(0 0 0 / 40%); 
   z-index: 2;
   width: 100%;
   height: 100%;
