--- a/public/css/login.css
+++ b/public/css/login.css
@@ -32,3 +32,47 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+#cookieConsent {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  text-align: center;
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#cookieConsent p {
+  margin: 0;
+  flex-grow: 1;
+  text-align: left;
+}
+
+#cookieConsent a {
+  color: #4a90e2;
+  text-decoration: none;
+}
+
+#cookieConsent a:hover {
+  text-decoration: underline;
+}
+
+#acceptCookies {
+  background-color: #4a90e2;
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+#acceptCookies:hover {
+  background-color: #357abd;
+}
+
