--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -6,8 +6,6 @@ body {
 }
 
 header {
-    background-color: #333;
-    color: #fff;
     padding: 10px 0;
     text-align: center;
 }
@@ -15,7 +13,7 @@ header {
 main {
     padding: 20px;
     max-width: 600px;
-    margin: 0 auto;
+    margin: 20px auto;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -53,4 +51,70 @@ button:hover {
     margin-top: 20px;
     color: green;
     font-weight: bold;
+}
+
+/* Menu Styling */
+#menu-container {
+    width: 70%;
+    margin: 20px auto;
+}
+
+#menu {
+    text-align: center;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.w {
+    padding-left: 5px;
+    padding-right: 5px;
+    border-left: solid 1px;
+}
+
+.w:first-child {
+    border-left: none;
+}
+
+.w:hover {
+    background-color: lightgray;
+    padding-left: 1.5%;
+    padding-right: 1.5%;
+    font-weight: bold;
+}
+
+hr {
+    width: 70%;
+    margin: 10px auto;
+}
+
+/* User Team and Login Styling */
+#user_team {
+    text-align: center;
+    margin: 10px 0;
+}
+
+.log {
+    text-align: center;
+    margin: 10px 0;
+}
+
+#login {
+    padding: 8px 15px;
+    background-color: #333;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+#login:hover {
+    background-color: #555;
+}
+
+/* Footer Styling */
+footer {
+    text-align: center;
+    padding: 20px;
 }
