--- a/public/css/shifts.css
+++ b/public/css/shifts.css
@@ -175,3 +175,11 @@ hr {
 #user_team {
   text-align: center;
 }
+#new_plan_button {
+  display: block; /* Hidden by default */
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  margin-top: 20px;
+}
