finshing users page

--- a/public/css/users.css
+++ b/public/css/users.css
@@ -17,8 +17,8 @@ body {
 
 h1 {
   text-align: center;
-  color: #1a73e8;
-  margin-bottom: 30px;
+  color: #0d0d0e;
+  margin-bottom: 20px;
 }
 
 .section {
