--- a/public/css/workstations.css
+++ b/public/css/workstations.css
@@ -151,3 +151,70 @@ tr:nth-child(odd) {
 .big-button:active {
   background-color: #333366;
 }
+
+/* Modal styling */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+  border-radius: 5px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+}
+
+#updateForm {
+  margin-top: 20px;
+}
+
+#updateForm input[type="submit"],
+#deleteStationBtn {
+  margin: 10px 5px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#updateForm input[type="submit"] {
+  background-color: #4a4a8e;
+  color: white;
+}
+
+#updateForm input[type="submit"]:hover {
+  background-color: #6565b9;
+}
+
+#deleteStationBtn {
+  background-color: #ff4444;
+  color: white;
+}
+
+#deleteStationBtn:hover {
+  background-color: #cc0000;
+}
